--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 
 * {
   font-family: "Poppins", sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -40,11 +41,24 @@ body {
 .card-category-image {
   @apply absolute w-full h-full transition-all duration-500 ease-in-out transform bg-center bg-cover;
 }
+.card-detail {
+  @apply relative flex items-center justify-center overflow-hidden max-h-full max-w-full rounded-2xl transition-all duration-500 ease-in-out;
+}
+.card-detail-image {
+  @apply absolute w-full h-full transition-all duration-500 ease-in-out transform bg-center bg-cover;
+}
 
 .card-category:hover {
   @apply shadow-2xl;
 }
 .card-category:hover .card-category-image {
+  @apply scale-110;
+}
+
+.card-detail:hover {
+  @apply shadow-2xl;
+}
+.card-detail:hover .card-detail-image {
   @apply scale-110;
 }
 
